[tool.poetry]
name = "arcaflow-plugin-kubeconfig"
version = "0.2.0"
description = ""
authors = ["Arcalot Contributors"]
license = "Apache-2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "0.10.1"
kubernetes = "^24.2.0"
PyYAML = ">=5.4"

[tool.poetry.dev-dependencies]
docformatter = "^1.5.0"
autoflake = "^1.7.6"
pydocstyle = "^6.1.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
